# iMuseum

./: .gitignore  CMakeLists.txt  README.md
iMuseum/: CMakeLists.txt
iMuseum-build/: CMakeCache.txt  Makefile  README.txt  cmake_install.cmake
iMuseum-build/glimac/: Makefile  cmake_install.cmake
iMuseum/assets/models/: sceneTest.3DS
iMuseum/glimac/src/: tiny_obj_loader.cpp
iMuseum/main/src/: main.cpp
iMuseum/src/: main.cpp
iSeason/: CMakeLists.txt
iSeason/glimac/include/glimac/: SDLWindowManager.hpp
project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
project/assets/models/: sceneTest.FBX
project/assets/models/SceneWinter/: sceneWinter.mtl
project/assets/models/bench/: arbor-bench.mtl
project/assets/models/checkpoint/: rain-drop-single.3ds
project/assets/models/rain/: rain.stl
project/assets/models/sceneTest/: scene.mtl
project/assets/models/snowflake/: flocon.3DS
project/assets/models/test/: snowman.3ds
project/assets/seasons/: autumn.conf  spring.conf  summer.conf  summer.txt  summerFIRST.txt  summerLIGHT.txt  winter.conf
project/assets/textures/: iseason.psd
project/template/: CMakeLists.txt  CMakelists.txt  Makefile  game  game.cpp
project/template/include/: Camera.hpp  Checkpoint.hpp  Engine.hpp  HUD.hpp  Light.hpp  Mesh.hpp  Model.hpp  ModelPicker.hpp  MousePicker.hpp  Scene.hpp  Shader.hpp  Skybox.hpp  Sound.hpp
project/template/shaders/: ambiant_light.fs.glsl  ambiant_lightFIRST.fs.glsl  light.fs.glsl  light.vs.glsl  rain.fs.glsl  rain.vs.glsl  snow.fs.glsl  snow.vs.glsl  summer_light.fs.glsl
project/template/src/: Camera.cpp  Checkpoint.cpp  Engine.cpp  FreeFlyCamera.cpp  HUD.cpp  Light.cpp  Mesh.cpp  Model.cpp  ModelPicker.cpp  MousePicker.cpp  Scene.cpp  Shader.cpp  Skybox.cpp  Sound.cpp
